Api contract with Open Api (#36)
* start to create a first template

* ...

* start to create a first template

* start to create a first template

* add language api

* remove unused code

* remove summonerId and accountId + fix ranks bugs

* update rank + board + summoner APIs

* update mastery

* update lol matches

* end all riot & destiny

* fix runes + some LOL participant deserialisation

* Ready to merge

* Update build-test-deploy.yaml